--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ npm-debug.log
 yarn-error.log
 .env
 .phpunit.result.cache
+
+.phpstorm.meta.php
+_ide_helper.php
+_ide_helper_models.php
+/config/ide-helper.php
+
+/public/css/form-sender.css
+/public/js/form-sender.js
+/public/mix-manifest.json
+
+/storage/clockwork
