--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,14 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
+        "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
