Configure backend part: - Mailer service - File uploader service - Supervisor - Docker

--- a/.env.container
+++ b/.env.container
@@ -1,17 +1,17 @@
-APP_NAME="Form sender"
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=Ob-order-imports
+APP_ENV=production
+APP_KEY=base64:gro5lGRQ7oE2ejlbUnVknXxKvpDS6M/cwBRHpKxsW/o=
+APP_DEBUG=false
+APP_URL=http://207.154.213.186
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=ob-order-import
+DB_USERNAME=root
+DB_PASSWORD=123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,7 +23,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=mailgun
+MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
@@ -40,6 +40,9 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 API_PREFIX=api
 API_DEBUG=false
+
+#DOCTRINE_LOGGER=LaravelDoctrine\ORM\Loggers\ClockworkLogger
+DOCTRINE_LOGGER=false
 
 FILE_MAIL_FROM=null
 FILE_MAIL_TO=null
