--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -71,7 +71,7 @@ http {
 
         add_header 'Access-Control-Allow-Origin' $http_origin always;
         add_header 'Access-Control-Allow-Methods' 'POST, GET, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;2018_08_19_140931_create_files_table
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Expose-Headers' 'X-Api-Token, X-Total-Count, X-Page, X-Page-Size, X-Http-Method-Override' always;
 
         add_header X-Frame-Options "SAMEORIGIN";
