--- a/.env.prod
+++ b/.env.prod
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ob-order-import
+DB_DATABASE=form-sender
 DB_USERNAME=root
-DB_PASSWORD=123
+DB_PASSWORD="CQ5NEK#9ymEM@ljV"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
