--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-APP_NAME=Ob-order-imports
+APP_NAME="Form sender"
 APP_ENV=production
 APP_KEY=base64:gro5lGRQ7oE2ejlbUnVknXxKvpDS6M/cwBRHpKxsW/o=
 APP_DEBUG=false
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=proxifymailscan@gmail.com
+MAIL_PASSWORD=P22negap
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -44,5 +44,5 @@ API_DEBUG=false
 #DOCTRINE_LOGGER=LaravelDoctrine\ORM\Loggers\ClockworkLogger
 DOCTRINE_LOGGER=false
 
-FILE_MAIL_FROM=null
-FILE_MAIL_TO=null
+FILE_MAIL_FROM=proxifymailscan@gmail.com
+FILE_MAIL_TO=jarnheimer@gmail.com
